--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -3341,7 +3341,7 @@ button .icon-search {
   color: #3F4B56;
 }
 .ql-toolbar.ql-snow .ql-formats .ql-header {
-  width: 6.25rem;
+  width: 7.5rem;
   height: 2.5rem;
 }
 .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-label,
@@ -3380,6 +3380,17 @@ button .icon-search {
   border-color: transparent;
   color: #3F4B56;
   background-color: #EBEBEB;
+}
+.ql-toolbar.ql-snow .ql-formats .ql-header.ql-expanded .ql-picker-label svg {
+  -moz-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
+  -webkit-transform-origin: 50% 50%;
+  -moz-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
 }
 .ql-toolbar.ql-snow .ql-formats .ql-header.ql-expanded .ql-picker-options {
   margin-left: -0.0625rem;
@@ -3431,29 +3442,55 @@ button .icon-search {
   border-color: #0098FF;
 }
 .ql-toolbar.ql-snow .ql-formats .ql-icon-picker {
-  width: 2.813rem;
+  width: 3.75rem;
   height: 2.5rem;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label,
+.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label {
+  width: 3.75rem;
+  height: 2.5rem;
+  padding: 0.5625rem 0.6875rem;
+}
+.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label .ql-icon-arrow {
+  fill-opacity: 1;
+  -moz-transform: translate(178px, -341px);
+  -o-transform: translate(178px, -341px);
+  -ms-transform: translate(178px, -341px);
+  -webkit-transform: translate(178px, -341px);
+  transform: translate(178px, -341px);
+}
+.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label:hover, .ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label:focus {
+  color: #3F4B56;
+  background-color: #EBEBEB;
+}
 .ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-item {
   width: 2.813rem;
   height: 2.5rem;
   padding: 0.5625rem 0.6875rem;
 }
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label:hover, .ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-label:focus,
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-item:hover,
-.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-item:focus {
+.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-item:hover, .ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-item:focus {
   color: #3F4B56;
   background-color: #EBEBEB;
 }
 .ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-options {
+  min-width: 2.813rem;
   box-shadow: 0 0 0.3125rem 0 #EBEBEB;
   padding: 0;
+}
+.ql-toolbar.ql-snow .ql-formats .ql-icon-picker .ql-picker-options .ql-icon-arrow {
+  fill-opacity: 0;
 }
 .ql-toolbar.ql-snow .ql-formats .ql-icon-picker.ql-expanded .ql-picker-label {
   border-color: transparent;
   color: #3F4B56;
   background-color: #EBEBEB;
+}
+.ql-toolbar.ql-snow .ql-formats .ql-icon-picker.ql-expanded .ql-picker-label .ql-icon-arrow {
+  fill-opacity: 1;
+  -moz-transform: translate(568px, 439px) rotate(180deg);
+  -o-transform: translate(568px, 439px) rotate(180deg);
+  -ms-transform: translate(568px, 439px) rotate(180deg);
+  -webkit-transform: translate(568px, 439px) rotate(180deg);
+  transform: translate(568px, 439px) rotate(180deg);
 }
 .ql-toolbar.ql-snow .ql-formats .ql-icon-picker.ql-expanded .ql-picker-options {
   margin-left: -0.0625rem;
@@ -3461,6 +3498,9 @@ button .icon-search {
 }
 .ql-toolbar.ql-snow .ql-formats .ql-icon-picker.ql-expanded .ql-picker-options .ql-picker-item.ql-selected svg {
   fill: #0098FF;
+}
+.ql-toolbar.ql-snow .ql-formats .ql-icon-picker.ql-expanded .ql-picker-options .ql-picker-item .ql-icon-arrow {
+  fill-opacity: 0;
 }
 .ql-toolbar.ql-snow .ql-formats button {
   width: 2.813rem;
