결함 #10037 프로세스, 문서양식에서 사용 상태 문서는 폐기 할 수 없다.
- 폐기 상태로 수정 가능한 버튼 추가(사용 상태에 한해)
- 폐기 처리 시, 관련 문서 여부 체크

--- a/src/main/resources/public/template/form/formList.html
+++ b/src/main/resources/public/template/form/formList.html
@@ -31,7 +31,9 @@
                            th:attr="onclick=|openFormEdit('${form.id}', false)|"></a>
                     </th:block>
                     <div th:unless="${form.editable == true}">
-                        <span th:text="${form.name}"></span>
+                        <a th:if="${form.status == 'form.status.use'}" th:text="${form.name}"
+                           th:attr="onclick=|openFormEdit('${form.id}', true)|"></a>
+                        <span th:unless="${form.status == 'form.status.use'}" th:text="${form.name}"></span>
                     </div>
                 </td>
                 <td width="10%" class="align-center">
