--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -169,7 +169,7 @@
                                 classes: "point-fill",
                                 bindKey: false,
                                 callback: function(modal) {
-                                    saveProcess(responseObject.id, false);
+                                    saveProcess(responseObject.id, false, true);
                                 }
                             });
                             // 삭제
