#10086 동적 차트 쿼리 생성 일감 MR 응대

--- a/src/main/resources/public/template/chart/chartEdit.html
+++ b/src/main/resources/public/template/chart/chartEdit.html
@@ -12,7 +12,7 @@
     </select>
 </div>
 <div class="flex-column edit-row mt-2">
-    <textarea id="chart" name="chart" th:text="${chart?.chartObj}"/>
+    <textarea id="chart" name="chart" th:text="${chart?.propertyJson}"/>
 </div>
 <div class="flex-column edit-row mt-2">
     <h4 class="sub-title under-bar bold" th:text="#{chart.label.defaultInfo}"/>
