#10237 프로세스, 폼의 상태가 사용이라도 "내보내기" 기능을 할수가 있어야 한다.
- 업무흐름관리 > 프로세스, 문서양식 메뉴에서 상태가 사용이라도 내보내기 버튼을 보이도록 수정한다.

--- a/src/main/resources/public/template/form/formSearch.html
+++ b/src/main/resources/public/template/form/formSearch.html
@@ -188,6 +188,15 @@
                                 }
                             });
                         } else if (responseObject.status === STATUS_USE) {
+                            // 내보내기 버튼
+                            options.buttons.push({
+                                content: i18n.msg('form.btn.export'),
+                                classes: "point-fill",
+                                bindKey: false,
+                                callback: function(modal) {
+                                    workflowUtil.export(responseObject.id, 'form');
+                                }
+                            });
                             // 폐기
                             options.buttons.push({
                                 content: i18n.msg('form.status.destroy'),
