--- a/src/main/resources/public/template/faq/faqSearch.html
+++ b/src/main/resources/public/template/faq/faqSearch.html
@@ -68,39 +68,32 @@
                         if (aliceJs.isEnableScrollEvent(offsetCount)) {
                             offsetCount = offsetCount + aliceJs.searchDataCount;
                         }
-                        // OverlayScrollbar 가 테이블 내부를 div로 처리하기 때문에 innerHTML(), insertAdjacentHTML()를 사용하여 직접 템플릿을 넣어줄경우 tr, td가 없어져버린다.
-                        // 따라서 임시테이블을 생성하고 가져온 템플릿을 넣어준 후 기존 테이블에 추가해야한다.
                         const faqTbody = document.querySelector('.list-body .os-content');
                         const tempTb = document.createElement('table');
                         tempTb.innerHTML = response.responseText;
                         for (let i = 0; i < tempTb.rows.length; i++) {
-                            const tempRow = tempTb.rows[i];
-                            const row = document.createElement('tr');
-                            row.className = tempRow.className;
-                            row.innerHTML = tempRow.innerHTML;
-                            faqTbody.appendChild(row);
+                            faqTbody.appendChild(tempTb.rows[i]);
                         }
                     } else {
                         document.getElementById('faqList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                    }
-
-                    OverlayScrollbars(document.querySelector('.list-body'), {
-                        className: 'scrollbar',
-                        callbacks: {
-                            onScroll: function(e) {
-                                const scrollHeight = e.target.scrollHeight;
-                                const scrollTop = e.target.scrollTop;
-                                const clientHeight = e.target.clientHeight;
-                                // 스크롤이 맨 마지막에 있을 경우
-                                if (scrollHeight - scrollTop === clientHeight) {
-                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                        searchFaqs(true);
+                        OverlayScrollbars(document.querySelector('.list-body'), {
+                            className: 'scrollbar',
+                            callbacks: {
+                                onScroll: function(e) {
+                                    const scrollHeight = e.target.scrollHeight;
+                                    const scrollTop = e.target.scrollTop;
+                                    const clientHeight = e.target.clientHeight;
+                                    // 스크롤이 맨 마지막에 있을 경우
+                                    if (scrollHeight - scrollTop === clientHeight) {
+                                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                            searchFaqs(true);
+                                        }
                                     }
                                 }
                             }
-                        }
-                    });
+                        });
+                    }
                 }
             };
             aliceJs.sendXhr(opt);
